<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background" >
    <TextView 
	    android:id="@+id/menu_settings_heading_textview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginBottom="10dp"
	    android:padding="5dp"
	    android:text="SETTINGS"
	    android:gravity="center"
	    android:textColor="@color/white"
	    android:textStyle="bold"
	    android:textSize="17sp"
		android:layout_marginTop="10dp"/>
	<ImageButton
		android:id="@+id/menu_settings_backbtn"
		android:layout_width="30dp"
		android:layout_height="wrap_content"
		android:background="@drawable/back_arrow_btn"
		android:layout_alignBottom="@+id/menu_settings_heading_textview"
		android:layout_alignLeft="@+id/menu_settings_heading_textview"
		android:layout_alignStart="@+id/menu_settings_heading_textview"
		android:layout_alignTop="@+id/menu_settings_heading_textview"
		android:contentDescription="@string/app_name"
		/>
    <LinearLayout 
        android:id="@+id/menu_settings_ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menu_settings_heading_textview">
        <Button 
	        android:id="@+id/menu_settings_rsd_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_rsd"
	        android:onClick="onRSDButtonClicked"
	        android:textColor="@android:color/white"
	        android:background="@color/btn_background"
	        android:layout_margin="20dp"
	        android:gravity="center"
	        android:layout_weight="1"
			android:padding="15dp"
			android:textSize="17dp"/>
         <Button 
	        android:id="@+id/menu_settings_delete_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_delete"
	        android:onClick="onDeleteButtonClicked"
	        android:textColor="@android:color/white"
	        android:background="@color/btn_background"
	        android:layout_margin="20dp"
	        android:gravity="center"
	        android:layout_weight="1"
			 android:padding="15dp"
			 android:textSize="17dp"/>
          <Button 
	        android:id="@+id/menu_settings_reset_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_reset"
	        android:onClick="onResetButtonClicked"
	        android:textColor="@android:color/white"
	        android:background="@color/btn_background"
	        android:layout_margin="20dp"
	        android:gravity="center"
	        android:layout_weight="1"
			  android:padding="15dp"
			  android:textSize="17dp"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/menu_settings_ll_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menu_settings_ll_btns">
        <TextView 
	        android:id="@+id/menu_settings_ssid_tv"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_ssid"
	        android:layout_margin="20dp"
	        android:textSize="19sp"
	        android:textColor="@color/menu_settings_blue"
	        android:layout_weight="1"
	        android:textStyle="bold"/>
	    <EditText 
	        android:id="@+id/menu_settings_ssid_et"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:background="@drawable/menu_settings_et_bg"
	        android:padding="10dp"
	        android:inputType="number"
	        android:singleLine="true"
	        android:layout_weight="1.5"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/menu_settings_ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menu_settings_ll_ssid">
        <TextView 
	        android:id="@+id/menu_settings_password_tv"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_password"
	        android:layout_margin="20dp"
	        android:textSize="19sp"
	        android:textColor="@color/menu_settings_blue"
	        android:layout_weight="1"
	        android:textStyle="bold"/>
	    <EditText 
	        android:id="@+id/menu_settings_password_et"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:background="@drawable/menu_settings_et_bg"
	        android:padding="10dp"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:layout_weight="1.5"/>
    </LinearLayout>
     <LinearLayout 
        android:id="@+id/menu_settings_ll_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menu_settings_ll_password">
        <TextView 
	        android:id="@+id/menu_settings_key_tv"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_settings_key"
	        android:layout_margin="20dp"
	        android:textSize="19sp"
	        android:textColor="@color/menu_settings_blue"
	        android:layout_weight="1"
	        android:textStyle="bold"/>
	    <EditText 
	        android:id="@+id/menu_settings_key_et"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:background="@drawable/menu_settings_et_bg"
	        android:padding="10dp"
	        android:inputType="text"
	        android:singleLine="true"
	        android:layout_weight="1.5"/>
    </LinearLayout>
   <LinearLayout 
        android:id="@+id/menu_settings_ll_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menu_settings_ll_key">
        <TextView 
	        android:id="@+id/menu_settings_ip_tv"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="192.168.1.1"
	        android:layout_margin="20dp"
	        android:textSize="19sp"
	        android:textColor="@color/menu_settings_blue"
	        android:layout_weight="1"
	        android:textStyle="bold"/>
	    <Button 
	        android:id="@+id/menu_settings_send_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_margin="20dp"
	        android:text="@string/menu_settings_send"
	        android:onClick="onSendButtonClicked"
	        android:textColor="@android:color/white"
	        android:background="@color/btn_background"
	        android:layout_weight="1.2"
			android:padding="15dp"
			android:textSize="17dp"/>
    </LinearLayout>
   

</RelativeLayout>
